# PictoMath

FINISHEDProject Cop2000/: CMakeLists.txt  main.cpp
SFML/: CMakeLists.txt  main.cpp
